--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_font_icons: ^2.2.4
+  flex_color_scheme: ^5.0.0
 
 dev_dependencies:
   flutter_test:
