--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
 
   flutter_font_icons: ^2.2.4
   flex_color_scheme: ^5.0.0
+
+  # hive database
   hive: ^2.1.0
   hive_flutter: ^1.1.0
 
@@ -50,6 +52,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+  #hive database generators
   hive_generator: ^1.1.2
   build_runner: ^2.1.10
   
