--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,11 @@ dependencies:
   # hive database
   hive: ^2.1.0
   hive_flutter: ^1.1.0
+
+  # form builder
+  flutter_form_builder: ^7.1.1
   form_builder_extra_fields: ^7.1.0
+  form_builder_validators: ^8.1.1
 
 dev_dependencies:
   flutter_test:
