add words to spell check dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "ARGB",
+        "checkmark",
+        "Cupertino",
+        "datetime",
         "einsatz",
-        "etbs"
+        "etbs",
+        "Fontisto"
     ]
 }
