--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_form_builder: ^7.1.1
   form_builder_extra_fields: ^7.1.0
   form_builder_validators: ^8.1.1
+  
+  dropdown_button2: ^1.4.0
 
 dev_dependencies:
   flutter_test:
