--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   form_builder_validators: ^8.1.1
   
   dropdown_button2: ^1.4.0
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
