--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   
   dropdown_button2: ^1.4.0
   font_awesome_flutter: ^10.1.0
+  pdf: ^3.8.0
+  path_provider: ^2.0.10
+  open_document: ^1.0.4
 
 dev_dependencies:
   flutter_test:
