--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,13 +30,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
 
+  # icons
+  cupertino_icons: ^1.0.2
   flutter_font_icons: ^2.2.4
+  font_awesome_flutter: ^10.1.0
+
+  # ui
   flex_color_scheme: ^5.0.0
+  dropdown_button2: ^1.4.0
 
   # hive database
   hive: ^2.1.0
@@ -46,9 +50,8 @@ dependencies:
   flutter_form_builder: ^7.1.1
   form_builder_extra_fields: ^7.1.0
   form_builder_validators: ^8.1.1
-  
-  dropdown_button2: ^1.4.0
-  font_awesome_flutter: ^10.1.0
+
+  # pdf
   pdf: ^3.8.0
   path_provider: ^2.0.10
   open_document: ^1.0.4
@@ -64,16 +67,15 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
-  #hive database generators
+  # hive database generators
   hive_generator: ^1.1.2
   build_runner: ^2.1.10
-  
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
