--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,19 @@ dev_dependencies:
   hive_generator: ^1.1.2
   build_runner: ^2.1.10
 
+  # generate app icons
+  icons_launcher: ^1.1.8
+
+# generate app icons with 'flutter pub run icons_launcher:create'
+flutter_icons:
+  image_path: 'assets/einsatz_helper_logo.png'
+  ios: true
+  android: true
+  web: true
+  windows: true
+  macos: false
+  linux: false
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
